--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         
         <div class="contact-info">
             <div class="contact-item">
-                <a href="https://api.whatsapp.com/send?phone=5561983741358" target="_blank"><img src="images/whatsapp.png" alt="WhatsApp" class="icon"> <span class="icon-text">(61) 98374-1358</span></a>
+                <a href="https://api.whatsapp.com/send?phone=5561983741358" target="_blank"><img src="images/WhatsApp.png" alt="WhatsApp" class="icon"> <span class="icon-text">(61) 98374-1358</span></a>
             </div>
             <div class="contact-item">
-                <a href="mailto:matheusp135@gmail.com"><img src="images/email.png" alt="Email" class="icon"> <span class="icon-text">matheusp135@gmail.com</span></a>
+                <a href="mailto:matheusp135@gmail.com"><img src="images/Email.png" alt="Email" class="icon"> <span class="icon-text">matheusp135@gmail.com</span></a>
             </div>
         </div>
     </section>
