--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section id="about">
         <h1>Sobre Mim</h1>
-        <p>Sou casado e pai de dois filhos, com formação em Serviço Social e Ciências Contábeis. Atualmente, estou realizando uma Pós-Graduação em Desenvolvimento Web Full Stack e sou estudante de programação na Alura. Estou focado em expandir minhas habilidades técnicas para integrar minha experiência em Serviço Social e Contabilidade ao desenvolvimento web. Busco oportunidades para aplicar esses conhecimentos em projetos que possam gerar um impacto positivo. Fora dos estudos, passo meu tempo com a família e gosto de explorar novas tecnologias e tendências na programação.</p>
+        <p>Sou casado e pai de dois filhos. Nos últimos meses, tenho me dedicado intensamente ao estudo de novas tecnologias no desenvolvimento web, impulsionado pela minha paixão por inovações tecnológicas. Estou constantemente expandindo minhas habilidades técnicas e focado em aplicar esses conhecimentos em projetos que possam gerar um impacto positivo. Fora dos estudos, valorizo o tempo com minha família e adoro explorar novas tendências na programação.</p>
         
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/matheus-pereira-42934ba3/" target="_blank">LinkedIn</a>
